--- a/src/blocks/airdatepicker/airdatepicker.pug
+++ b/src/blocks/airdatepicker/airdatepicker.pug
@@ -1,22 +1,22 @@
 div.flex-wrap
     div.arrow__wrapper
-        input(type="text"
-            data-range="true"
-            data-multiple-dates-separator=" - " 
-            class="dateRange range"
-            class="datepicker-here"
-            id="startDate"
-            placeholder="ДД.ММ.ГГГГ")
+        input(type='text'
+            data-range='true'
+            data-multiple-dates-separator=' - ' 
+            class='dateRange range'
+            class='datepicker-here'
+            id='startDate'
+            placeholder='ДД.ММ.ГГГГ')
             
     div.arrow__wrapper
-        input(type="text"
-            class="range"
-            id="endDate"
-            placeholder="ДД.ММ.ГГГГ")
+        input(type='text'
+            class='range'
+            id='endDate'
+            placeholder='ДД.ММ.ГГГГ')
 
-//- input(type='text' class="datepickerWrap" id='start' data-range="true"
-//-     data-multiple-dates-separator=" - "
-//-     class="datepicker-here")
-//- input(type='text' class="datepickerWrap"  id='end'  data-range="true"
-//-     data-multiple-dates-separator=" - "
-//-     class="datepicker-here")
+//- input(type='text' class='datepickerWrap' id='start' data-range='true'
+//-     data-multiple-dates-separator=' - '
+//-     class='datepicker-here')
+//- input(type='text' class='datepickerWrap'  id='end'  data-range='true'
+//-     data-multiple-dates-separator=' - '
+//-     class='datepicker-here')
