--- a/src/blocks/donutChart/donutChart.scss
+++ b/src/blocks/donutChart/donutChart.scss
@@ -41,7 +41,7 @@
     cy: 84px;
     r: 75px;
     fill: transparent;
-    stroke: #8BA4F9;
+    stroke: #9BA1FB;
     stroke-width: 10px;
     stroke-dasharray: 450px;
     stroke-dashoffset: 330px;
