--- a/src/blocks/littleDropdown/littleDropdown.scss
+++ b/src/blocks/littleDropdown/littleDropdown.scss
@@ -4,6 +4,7 @@
 }
 
 .little-dropdowns .dd-button {
+  position: relative;
   display: inline-block;
   border: 1px solid rgba(31, 32, 65, 0.25);
   border-radius: 4px;
@@ -12,12 +13,14 @@
   margin-top: 5px;
   font-style: normal;
   font-weight: normal;
-  font-size: 20px;
+  font-size: 1.14rem;
   line-height: 18px;
   color: $color-standart;
-  padding-left: 15px;
-  padding-top: 20px;
-  padding-bottom: 10px;
+  // margin-bottom:35px;
+  display: table-cell;
+  vertical-align: middle;
+  padding-left: 20px;
+  color: rgba(31, 32, 65, 0.75);
 }
 
 .little-dropdowns .dd-button:after {
@@ -61,7 +64,6 @@
 
 .little-dropdowns .dd-menu li {
   padding: 10px 20px;
-  cursor: pointer;
   white-space: nowrap;
   width: 390px;
   display: flex;
@@ -79,6 +81,8 @@
   box-sizing: border-box;
   border-radius: 22px;
   background: #ffffff;
+  outline: none;
+  cursor: pointer;
 }
 
 .little-dropdowns .title {
@@ -86,7 +90,7 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 15px;
   /* identical to box height */
 
@@ -107,25 +111,27 @@
   font-family: "Montserrat";
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 15px;
   text-transform: uppercase;
   color: rgba(31, 32, 65, 0.5);
   border: none;
   background: transparent;
   outline: none;
+  cursor: pointer;
 }
 
 .apply {
   font-style: normal;
   font-weight: bold;
-  font-size: 18px;
+  font-size: 1rem;
   line-height: 15px;
   text-transform: uppercase;
   color: #bc9cff;
   border: none;
   background: transparent;
   outline: none;
+  cursor: pointer;
 }
 
 // @media only screen and (max-width: 600px) {
