--- a/src/blocks/range-slider/range-slider.pug
+++ b/src/blocks/range-slider/range-slider.pug
@@ -1,3 +1,2 @@
-input(type="text" class="slider-range-price" id="amount")
-div(id="slider-range")  
+div(id='slider-range')  
 div.slider__range__title Стоимость за сутки пребывания в номере 
