--- a/src/blocks/toggle/toggle.pug
+++ b/src/blocks/toggle/toggle.pug
@@ -1,2 +1,2 @@
-input#cb1.tgl.tgl-light(type ="checkbox") 
-label.tgl-btn(for = "cb1")
+input#cb1.tgl.tgl-light(type ='checkbox') 
+label.tgl-btn(for = 'cb1')
