--- a/src/components/card-room/card-room.scss
+++ b/src/components/card-room/card-room.scss
@@ -30,7 +30,7 @@
   }
   &-span {
     font-weight: normal;
-    font-size: 18px;
+    font-size: 1rem;
   }
 }
 
@@ -42,7 +42,7 @@
   --star-size: 24px;
   --star-outline: #4caf50 solid 1px;
   --star-color: #fff;
-  --star-background: #bc9cff;
+  --star-background: #9BA1FB;
 }
 
 .Stars {
@@ -71,7 +71,7 @@
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-text-stroke: 2px #bc9cff;
+  -webkit-text-stroke: 2px #9BA1FB;
 }
 
 .stars__decor {
@@ -98,7 +98,7 @@
     &-number {
       font-style: normal;
       font-weight: bold;
-      font-size: 24px;
+      // font-size: 24px;
       line-height: 17px;
       color: #1f2041;
     }
@@ -109,7 +109,7 @@
     }
     &-span {
       font-weight: normal;
-      font-size: 20px;
+      // font-size: 20px;
     }
   }
 }
