--- a/src/components/datepicker/datepicker.pug
+++ b/src/components/datepicker/datepicker.pug
@@ -1,12 +1,12 @@
 //- form
-//- 	label( for="txtDateRange")
-//- 	input(  type="text" id="txtDateRange" name="txtDateRange" class="input__date--single")
-//- 	input(type="hidden" name="start-date" id="start-date" placeholder="ДД.ММ.ГГГГ" class="input-date start-date")
-//- 	input(type="hidden" value=""  name="end-date" id="end-date" placeholder="ДД.ММ.ГГГГ" class="input-date")   
+//- 	label( for='txtDateRange')
+//- 	input(  type='text' id='txtDateRange' name='txtDateRange' class='input__date--single')
+//- 	input(type='hidden' name='start-date' id='start-date' placeholder='ДД.ММ.ГГГГ' class='input-date start-date')
+//- 	input(type='hidden' value=''  name='end-date' id='end-date' placeholder='ДД.ММ.ГГГГ' class='input-date')   
 
-//- input(id="calendar")
+//- input(id='calendar')
 
-//- label(for="from")
-//- input(type="text" id="from" name="from")
-//- label(for="to")
-//- input(type="text" id="to" name="to")
+//- label(for='from')
+//- input(type='text' id='from' name='from')
+//- label(for='to')
+//- input(type='text' id='to' name='to')
