--- a/src/components/form-search/form-search.scss
+++ b/src/components/form-search/form-search.scss
@@ -1,4 +1,3 @@
-
 .flexs {
   display: flex;
   justify-content: space-between;
@@ -29,24 +28,22 @@
   background-repeat: no-repeat;
 }
 
-
-
-.input-date{
+.input-date {
   padding-left: 15px;
 }
 
-.input__date--single{
+.input__date--single {
   width: 266px;
-height: 44px;
-background: #FFFFFF;
-/* Dark 25% */
+  height: 44px;
+  background: #ffffff;
+  /* Dark 25% */
 
-border: 1px solid rgba(31, 32, 65, 0.25);
-box-sizing: border-box;
-border-radius: 4px;
+  border: 1px solid rgba(31, 32, 65, 0.25);
+  box-sizing: border-box;
+  border-radius: 4px;
 }
 
-.input__date--single::before{
+.input__date--single::before {
   content: "";
   padding: 5px;
   //   //set tickness
@@ -58,7 +55,7 @@ border-radius: 4px;
   background-repeat: no-repeat;
 }
 
-.form-search{
+.form-search {
   width: 560px;
   background: #ffffff;
   border: 1px solid rgba(0, 0, 0, 0.12);
@@ -68,6 +65,13 @@ border-radius: 4px;
   // padding: 30px 40px;
 }
 
+.search-title-checkout {
+  margin-left: 32%;
+}
+
+.search-container-form {
+  padding: 6% 7%;
+}
 // .form-search__label{
 //   font-family: "Montserrat";
 //   font-style: normal;
@@ -92,38 +96,143 @@ border-radius: 4px;
 //   margin-left: 10px;
 // }
 
-.search-dropdown .dropdowns .dd-button{
+.search-dropdown .dropdowns .dd-button {
   margin-bottom: 20px;
 }
 
-.search-btn-confirm{
+.search-btn-confirm {
   margin: 25px 0;
 }
 
+@media only screen and (max-width: 700px) {
+  .form-search .dropdowns .dd-button::after {
+    left: 21.5em;
+  }
+  .menu-logo {
+    display: block;
+    padding: 20px 0 10px 0;
+    width: 180px;
+    height: 50px;
+    text-align: center;
+    float: none;
+  }
+
+  .menu-logo-toggle {
+    margin-left: 80%;
+  }
+}
+
 @media only screen and (max-width: 600px) {
-  .form-search{
+  .form-search {
     width: 500px;
     padding: 20px 10px;
     margin: 0 auto;
   }
+
+  .search-container-form {
+    padding: 3% 1%;
+  }
+
+  .form-search .title-main {
+    font-size: 23px;
+  }
+
+  .form-search .dropdowns .dd-button::after {
+    left: 27.5em;
+  }
 }
 
 @media only screen and (max-width: 500px) {
-
-  .form-search{
+  .form-search {
     width: 340px;
     padding: 20px 10px;
     margin: 0 auto;
   }
-  
-  .search-dropdown .range{
+
+  .search-dropdown .range {
     width: 150px;
   }
-  .search-dropdown .dropdowns .dd-button{
+  .search-dropdown .dropdowns .dd-button {
     width: 320px;
   }
 
-  .form-search .btn-confirm{
+  .form-search .btn-confirm {
     width: 320px;
+  }
+}
+@media only screen and (max-width: 550px) {
+  // .form-search {
+  //   width: 3x;
+  // }
+
+  // .calculator__container{
+  //   margin: 10px;
+  // }
+
+  // .form-search .range {
+  //   width: 180px;
+  // }
+
+  .form-search .datepicker {
+    width: 280px;
+  }
+  // .form-search .dropdowns .dd-button {
+  //   width: 370px;
+  // }
+
+  // .form-search .dropdowns .dd-menu {
+  //   width: 370px;
+  // }
+
+  // .calculator__total{
+  //   font-weight: bold;
+  // }
+
+  // .form-search .btn-confirm {
+  //   width: 370px;
+  // }
+
+  .title-checkout {
+    margin-left: 25%;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .form-search {
+    width: 310px;
+  }
+
+  .forn-search {
+    margin-left: 0px;
+  }
+
+  .form-search .range {
+    width: 130px;
+    height: 50px;
+  }
+
+  .form-search .datepicker {
+    width: 280px;
+  }
+  .form-search .dropdowns .dd-button {
+    width: 290px;
+    height: 50px;
+  }
+
+  .form-search .dropdowns .dd-menu {
+    width: 280px;
+  }
+
+  .form-search .btn-confirm {
+    width: 290px;
+    height: 50px;
+  }
+
+  .form-search .dropdowns .dd-button::after {
+    left: 16em;
+  }
+
+  .title-checkout {
+    margin-left: 20%;
   }
 }
