--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -42,7 +42,7 @@
         text-decoration: none;
         font-style: normal;
         font-weight: normal;
-        font-size: 20.5px;
+        font-size: 1.12rem;
         color: $black-text;
         padding: 26px 18.5px;
       }
@@ -131,10 +131,9 @@
     margin-bottom: 10px;
   }
 
-  .menu-logo-toggle{
-    
+  .menu-logo-toggle{ 
     margin-left: 90%;
-    margin-top: -65px;
+    margin-top: -60px;
   }
 
   .fa-bars{
