--- a/src/components/info-page/info-page.pug
+++ b/src/components/info-page/info-page.pug
@@ -3,7 +3,9 @@ html
   head
     title my jade template
   body
+  .info-page
     include ../header/header.pug
+    .clear
     br
     include ../info-room/info-room.pug
     include ../footer/footer.pug
