--- a/src/components/search-page/search-page.pug
+++ b/src/components/search-page/search-page.pug
@@ -7,7 +7,7 @@ html
     .clear
     .main-background-search
       include ../form-search/form-search.pug
-      p(class="slogan" style='white-space:pre;') 
+      p(class='slogan' style='white-space:pre;') 
         |Лучшие номера для вашей работы, 
         |  отдыха и просто вдохновения
     include ../footer/footer.pug
