--- a/src/components/signin-form/signin-form.scss
+++ b/src/components/signin-form/signin-form.scss
@@ -1,8 +1,7 @@
 
 
-.container-form {
-  align-content: center;
-  margin: 0 auto;
+.signin-container-form {
+  padding: 32px 30px 40px 40px;
 }
 
 .input-signin {
@@ -20,7 +19,7 @@
 
 .text {
   font-family: "OpenSans-Bold";
-  font-size: 16px;
+  font-size: 0;
   line-height: 18px;
 }
 
