--- a/src/blocks/airdatepicker/single_airpicker.pug
+++ b/src/blocks/airdatepicker/single_airpicker.pug
@@ -1,7 +1,8 @@
-input(type="text"
-    data-range="true"
-    data-multiple-dates-separator=" - "
-    data-language="en"
-    placeholder="ДД.ММ.ГГГГ"
-    id ="single__input__range"
-    class="datepicker-here")
+div.single-arrow-wrapper
+    input(type='text'
+        data-range='true'
+        data-multiple-dates-separator=' - '
+        data-language='en'
+        placeholder='ДД.ММ.ГГГГ'
+        id ='single__input__range'
+        class='datepicker-here')
