--- a/src/blocks/calculator/calculator.pug
+++ b/src/blocks/calculator/calculator.pug
@@ -1,34 +1,38 @@
 .calculator-wrapper
-    div(class="calculator")
+    div(class='calculator')
         .calculator__container
             .flex-row
-                p(class="card-number") 
-                    span(class="card-number__symbol") &#8470; 
-                    span(class="room-number") 888
-                p(class="card-price") 9 990P 
-                        span(class="card-span")  в сутки
+                p(class='card-number') 
+                    span(class='card-number__symbol') &#8470; 
+                    span(class='room-number') 888
+                p(class='card-price') 9 990P 
+                        span(class='card-span')  в сутки
             .row.form__search__title
-                label(class="form-search__label form-search__label-arrival") Прибытие
-                label(class="form-search__label") Выезд
-            div(class="calculator-datepicker")
+                p(class='title') Прибытие
+                p(class='title title-checkout') Выезд
+            div(class='calculator-datepicker')
                 include ../../blocks/airdatepicker/airdatepicker.pug
-            label(class="form-search__label form-search__label-guests") Гости
-            div(class="calculator-dropdown")
+            p(class='title')
+            div(class='calculator-dropdown')
                 include ../../blocks/dropdown/dropdown.pug
             .flex-row.calculator-count.calculator-count--price
                 p 9 990P x 4 сутки
                 p 39 900P
             .flex-row.calculator-count
-                p Сбор за услуги: скидка 2 179₽
-                    span(class="calculator__hint")
+                .row
+                    p Сбор за услуги: скидка 2 179₽
+                        span(class='calculator__hint')
+                    i(class="material-icons material-icons--info") info
                 p 0P
             .flex-row.calculator-count
-                p(style='white-space:pre;')
-                    | Сбор за дополнительные 
-                    | услуги
+                .row
+                    p(style='white-space:pre;')
+                        | Сбор за дополнительные 
+                        | услуги
+                    i(class="material-icons material-icons--info") info
                 p 300P
-            h3(class="calculator__total") Итого...............................................38 081₽
-            button(type="button" class="btn btn-confirm") Забронировать
+            h3(class='calculator__total') Итого..................................................38 081₽
+            button(type='button' class='btn btn-confirm') Забронировать
             
 
 
