--- a/src/blocks/input-dates/input-dates.scss
+++ b/src/blocks/input-dates/input-dates.scss
@@ -7,7 +7,7 @@
     margin-top: 5px;
     font-style: normal;
     font-weight: normal;
-    font-size: 18px;
+    font-size: 1rem;
     line-height: 18px;
     color: $color-standart;
     margin-bottom:35px;
