--- a/src/blocks/range-slider/range-slider.scss
+++ b/src/blocks/range-slider/range-slider.scss
@@ -29,3 +29,26 @@
 #slider-range .ui-widget-header {
   background: linear-gradient(180deg, #6fcf97 0%, #66d2ea 100%);
 }
+
+.slider-range-price {
+  // float: right;
+  // position: absolute;
+  // top: -3.3em;
+  // left: 18em;
+  font-size: 0.9rem;
+  color: black;
+  border: none;
+  // padding-right: -5%;
+}
+
+.slider__range__title {
+  padding-top: 25px;
+  padding-bottom: 38px;
+  font-size: 17.7px;
+}
+
+// @media only screen and (max-width: 600px) {
+//   .slider-range-price {
+//     left: 15em;
+//   }
+// }
