--- a/src/components/components-page/components-page.scss
+++ b/src/components/components-page/components-page.scss
@@ -171,7 +171,7 @@
       & h4 {
         margin-block-start: 0em;
         margin-block-end: 0.1em;
-        margin-left: 15px;
+        margin-left: 0.83rem;
         font-style: normal;
         font-size: 22px;
         font-weight: bold;
@@ -187,7 +187,7 @@
         color: rgba(31, 32, 65, 0.75);
         margin-left: 15px;
         font-style: normal;
-        font-size: 20.6px;
+        font-size: 1.14rem;
         font-weight: 300;
       }
     }
