--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -3,14 +3,14 @@ footer
   .footer.container
     .footer-nav
       .footer-nav-block
-        .logo(class="footer-block logo")
+        .logo(class='footer-block logo')
         div
-          p(style='white-space:pre;' class="footer-slogan")
+          p(style='white-space:pre;' class='footer-slogan')
             | Бронирование номеров в лучшем 
             | отеле 2019 года по версии
             | ассоциации «Отельные взгляды»
       .footer-nav-block
-        h3(class="footer-block subtitle") Навигация
+        h3(class='footer-block subtitle') Навигация
         ul
           li 
             a О нас
@@ -21,7 +21,7 @@ footer
           li
             a Услуги
       .footer-nav-block
-        h3(class="footer-block subtitle") О нас
+        h3(class='footer-block subtitle') О нас
         ul
           li 
             a О сервисе
@@ -32,7 +32,7 @@ footer
           li 
             a Инвесторы
       .footer-nav-block
-        h3(class="footer-block subtitle") Служба поддержки
+        h3(class='footer-block subtitle') Служба поддержки
         ul
           li 
             a Соглашения
@@ -41,47 +41,47 @@ footer
           li
             a Связь с нами
       .footer-nav-block
-        h3(class="footer-block subtitle") Подписка
-        p(style='white-space:pre;' class="subtitle-describtion")
+        h3(class='footer-block subtitle') Подписка
+        p(style='white-space:pre;' class='subtitle-describtion')
           | Получайте специальные
           | предложения и новости сервиса
-        +input-subscription("Email")
-  hr(class="footer-strip")
-  div(class="footer-details").container
+        +input-subscription('Email')
+  hr(class='footer-strip')
+  div(class='footer-details').container
      .flex-row
-        p(class="footer-details-copyright") Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
+        p(class='footer-details-copyright') Сорyright &copy; 2018 Тохin отель. Все права зачищены. 
         ul.row
             li
-              a(href="#")
-                svg(width="0" height="0")
-                  radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                    stop(stop-color="#BC9CFF" offset="0")
-                    stop(stop-color="#BC9CFF" offset="0.05")
-                    stop(stop-color="#8BA4F9" offset="0.45")
-                    stop(stop-color="#8BA4F9" offset="0.6")
-                    stop(stop-color="#8BA4F9" offset="0.9")
+              a(href='#')
+                svg(width='0' height='0')
+                  radialGradient(id='rg' r='150%' cx='30%' cy='107%')
+                    stop(stop-color='#8BA4F9' offset='0')
+                    stop(stop-color='#8BA4F9' offset='0.05')
+                    stop(stop-color='#8BA4F9' offset='0.45')
+                    stop(stop-color='#BC9CFF' offset='0.6')
+                    stop(stop-color='#BC9CFF' offset='0.9')
                 div.div
-                  i(class="fab fa-twitter" aria-hidden="true")
+                  i(class='fab fa-twitter' aria-hidden='true')
             li
-              a(href="#")
-                svg(width="0" height="0")
-                  radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                    stop(stop-color="#BC9CFF" offset="0")
-                    stop(stop-color="#BC9CFF" offset="0.05")
-                    stop(stop-color="#8BA4F9" offset="0.45")
-                    stop(stop-color="#8BA4F9" offset="0.6")
-                    stop(stop-color="#8BA4F9" offset="0.9")
+              a(href='#')
+                svg(width='0' height='0')
+                  radialGradient(id='rg' r='150%' cx='30%' cy='107%')
+                    stop(stop-color='#BC9CFF' offset='0')
+                    stop(stop-color='#BC9CFF' offset='0.05')
+                    stop(stop-color='#8BA4F9' offset='0.45')
+                    stop(stop-color='#8BA4F9' offset='0.6')
+                    stop(stop-color='#8BA4F9' offset='0.9')
                 div.div
-                  i(class="fab fa-facebook-square" aria-hidden="true")
+                  i(class='fab fa-facebook-square' aria-hidden='true')
             li
-              a(href="#")
-                svg(width="0" height="0")
-                  radialGradient(id="rg" r="150%" cx="30%" cy="107%")
-                    stop(stop-color="#8BA4F9" offset="0")
-                    stop(stop-color="#8BA4F9" offset="0.05")
-                    stop(stop-color="#8BA4F9" offset="0.45")
-                    stop(stop-color="#8BA4F9" offset="0.6")
-                    stop(stop-color="#8BA4F9" offset="0.9")
+              a(href='#')
+                svg(width='0' height='0')
+                  radialGradient(id='rg' r='150%' cx='30%' cy='107%')
+                    stop(stop-color='#8BA4F9' offset='0')
+                    stop(stop-color='#8BA4F9' offset='0.05')
+                    stop(stop-color='#8BA4F9' offset='0.45')
+                    stop(stop-color='#8BA4F9' offset='0.6')
+                    stop(stop-color='#8BA4F9' offset='0.9')
                 div.div
-                  i(class="fab fa-instagram" aria-hidden="true")
+                  i(class='fab fa-instagram' aria-hidden='true')
             
