--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -16,7 +16,7 @@
         color: $black-text;
         font-family: "Montserrat";
         font-weight: bold;
-        font-size: 20.6px;
+        font-size: 1.14rem;
         line-height: 33px;
       }
       & ul {
@@ -25,7 +25,7 @@
           margin: 28px 0;
           & a {
             font-family: "Montserrat";
-            font-size: 20.6px;
+            font-size: 1.14rem;
             color: $light-black-color;
           }
         }
@@ -64,7 +64,7 @@
     color: $black-text;
     font-family: "Montserrat";
     font-weight: bold;
-    font-size: 20.6px;
+    font-size: 1.14rem;
     line-height: 33px;
     margin-left: 20px;
     margin-block-start: 0.8em;
@@ -114,7 +114,7 @@
         & p {
           color: $black-text;
           font-weight: bold;
-          font-size: 16px;
+          font-size: 0.9rem;
           line-height: 33px;
         }
         & ul {
@@ -122,7 +122,7 @@
           li {
             margin: 28px 0;
             & a {
-              font-size: 16px;
+              font-size: 0.9rem;
               color: $light-black-color;
             }
           }
