--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -2,17 +2,17 @@
 include ../mixins.pug
 
 div
-  div(class="nav-wrapper")
-    div(class="container menu")
-      div(id="logo" class="menu-logo")
-      label(for="drop" class="menu-logo-toggle") 
-          i(class="fa fa-bars" aria-hidden="true")
-      input(type="checkbox" class="menu-logo-drop" id="drop")
-      ul(class="menu-nav")
+  div(class='nav-wrapper')
+    div(class='container menu')
+      div(id='logo' class='menu-logo')
+      label(for='drop' class='menu-logo-toggle') 
+          i(class='fa fa-bars' aria-hidden='true')
+      input(type='checkbox' class='menu-logo-drop' id='drop')
+      ul(class='menu-nav')
         +list('О нас')
         +list('Услуги')
         +list('Вакансии')
         +list('Новости')
         +list('Соглашения')
-        +button-signin-header('Войти', 'signin-page.html', "header-btn-signin" )
+        +button-signin-header('Войти', 'signin-page.html', 'header-btn-signin' )
         +button-signup('Зарегистрироватьcя', 'signup-page.html').header__btn--signup
