--- a/src/components/signin-form/signin-form.pug
+++ b/src/components/signin-form/signin-form.pug
@@ -1,13 +1,13 @@
 .wrapper
   .wrap
-    .container-form
-        h1(class="title-main") Войти
+    .signin-container-form
+        h1(class='title-main') Войти
 
-        input(class="input-text input-signin" placeholder="Email")
-        input(class="input-text input-signin input-signin--second" placeholder="Пароль")
+        input(class='input-text input-signin' placeholder='Email')
+        input(class='input-text input-signin input-signin--second' placeholder='Пароль')
 
-        button(type="button" class="btn  btn-confirm btn-signin") Войти
+        button(type='button' class='btn  btn-confirm btn-signin') Войти
         
         .flex-row
-          div(class="text text-signin") Нет аккаунта на Toxin?
-          +button-signin('Создать', 'signin-page.html', "btn-create")
+          div(class='text text-signin') Нет аккаунта на Toxin?
+          +button-signin('Создать', 'signin-page.html', 'btn-create')
